app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require_self
 *= require_tree .
 */
body { padding-top: 70px; }
.img-thmb {
    width: 64px;
    height: 64px;
}
#map-canvas {
    min-height: 500px;
    max-height: 80%;
    min-width: 300px;
    max-width: 80%;
    margin: 0px;
    padding: 0px;
}

